# canny

./: README.md  configure.ac  main.py
src/: Makefile.am  SConstruct  canny.py  main.cc  main.py  rev.py
