# Binaries.

TESTS =
bin_PROGRAMS = 
noinst_PROGRAMS =
noinst_LIBRARIES =

SUBDIRS = # reed_solomon # cryptopp base

# bin_PROGRAMS += jpeg_benchmark generate_aesthete_matrices queue_main

# queue_main_SOURCES = queue_main.cc queue.h
# queue_main_LDADD = -lpthread

# noinst_LIBRARIES += libecc_experiment.a
# libecc_experiment_a_SOURCES = ecc_experiment.cc ecc_experiment.h ecc_image.h

noinst_LIBRARIES += libjpeg_codec.a
libjpeg_codec_a_SOURCES = jpeg_codec.cc jpeg_codec.h
libjpeg_codec_a_CPPFLAGS = -Wall

# noinst_PROGRAMS += jpeg_codec_unittest
# jpeg_codec_unittest_SOURCES = jpeg_codec_unittest.cc
# jpeg_codec_unittest_CPPFLAGS = -I$(top_srcdir)/include
# jpeg_codec_unittest_LDADD = $(top_builddir)/lib/libgtest.la 
# jpeg_codec_unittest_LDADD += libjpeg_codec.a
# TESTS += jpeg_codec_unittest

